# yk-daemon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  WINDOWS_SERVICE.md  config.example.json  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  release.yml
examples/: README.md  bash_client.sh  get_totp.py  rest_api_client.py  socket_client.py
src/: __init__.py  daemon.py  notifications.py  rest_api.py  socket_server.py  yubikey.py
src/yk_daemon/: __init__.py  config.py  daemon.py  notifications.py  rest_api.py  service.py  socket_server.py  yubikey.py
tests/: __init__.py  test_config.py  test_daemon.py  test_notifications.py  test_rest_api.py  test_service.py  test_socket_server.py  test_yubikey.py
